refactor: Order 관련 도메인을 JPA 기반으로 리펙토링